@@ -1,4 +1,4 @@
-// Copyright (C) 2009 Anders Logg
+// Copyright (C) 2009-2011 Anders Logg
 //
 // This file is part of DOLFIN.
 //
@@ -16,12 +16,14 @@
 // along with DOLFIN. If not, see <http://www.gnu.org/licenses/>.
 //
 // First added:  2009-07-02
-// Last changed: 2011-02-21
+// Last changed: 2011-10-21
 
 #ifndef __GLOBAL_PARAMETERS_H
 #define __GLOBAL_PARAMETERS_H
 
 #include "Parameters.h"
+#include <dolfin/la/KrylovSolver.h>
+#include <dolfin/la/LUSolver.h>
 
 namespace dolfin
 {
@@ -116,6 +118,10 @@ namespace dolfin
       p.add("linear_algebra_backend",
             default_backend,
             allowed_backends);
+
+      // Add nested parameter sets
+      p.add(KrylovSolver::default_parameters());
+      p.add(LUSolver::default_parameters());
 
       return p;
     }
