@@ -1,3 +1,4 @@
+ - Propagate global parameters to Krylov and LU solvers
  - Fix OpenMp assemble of scalars
  - Make OpenMP assemble over sub domains work
  - DirichletBC.get_boundary_values, FunctionSpace.collapse now return a dict in Python
